src/test/ui/const-eval-overflow-2.stderr
error[E0080]: constant evaluation error
  --> $DIR/const-eval-overflow-2.rs:21:25
   |
LL | const NEG_NEG_128: i8 = -NEG_128;
   |                         ^^^^^^^^ attempt to negate with overflow
   |
note: for pattern here
  --> $DIR/const-eval-overflow-2.rs:26:9
   |
LL |         NEG_NEG_128 => println!("A"),
   |         ^^^^^^^^^^^

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0080"
